# xivMonitorDaemon

./: .gitignore  CMakeLists.txt
cmake/Modules/: FindTINS.cmake
